Populate tracks list for playlists
and note the fact that the tracks in a folder are the union of that
folder's content